--- a/cart.html
+++ b/cart.html
@@ -192,30 +192,79 @@
                     </thead>
                     <tbody class="align-middle">
                         <tr>
-                            <td class="align-middle"><img src="img/product-1.jpg" alt="" style="width: 50px;"> Colorful
-                                Stylish Shirt</td>
-                            <td class="align-middle">$150</td>
+                            <td class="align-middle"><img src="img/producto 1.jpg" alt="" style="width: 50px;">Crema
+                                Antioxidante
+                            </td>
+                            <td class="align-middle">$1800</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
                                     <div class="input-group-btn">
-                                        <button id="disminuir" class="btn btn-sm btn-primary">
+                                        <button id="disminuir1" class="btn btn-sm btn-primary">
                                             <i class="fa fa-minus"></i>
                                         </button>
                                     </div>
-                                    <div type="text" class="form-control form-control-sm bg-secondary text-center"
-                                        id="contador"></div>
+                                    <div type="text" id="contador1"
+                                        class=" form-control form-control-sm bg-secondary text-center"></div>
                                     <div class="input-group-btn">
-                                        <button id="aumentar" class="btn btn-sm btn-primary btn-plus">
+                                        <button id="aumentar1" class="btn btn-sm btn-primary btn-plus">
                                             <i class="fa fa-plus"></i>
                                         </button>
                                     </div>
                                 </div>
                             </td>
-                            <td class="align-middle">$150</td>
+                            <td class="align-middle">$1800</td>
                             <td class="align-middle"><button class="btn btn-sm btn-primary"><i
                                         class="fa fa-times"></i></button></td>
                         </tr>
                         <tr>
+                            <td class="align-middle"><img src="img/producto 2.jpg" alt="" style="width: 50px;">Serum BHA
+                                + AHA
+                            </td>
+                            <td class="align-middle">$1600</td>
+                            <td class="align-middle">
+                                <div class="input-group quantity mx-auto" style="width: 100px;">
+                                    <div class="input-group-btn">
+                                        <button id="disminuir2" class="btn btn-sm btn-primary">
+                                            <i class="fa fa-minus"></i>
+                                        </button>
+                                    </div>
+                                    <div type="text" id="contador2"
+                                        class=" form-control form-control-sm bg-secondary text-center"></div>
+                                    <div class="input-group-btn">
+                                        <button id="aumentar2" class="btn btn-sm btn-primary btn-plus">
+                                            <i class="fa fa-plus"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="align-middle">$1600</td>
+                            <td class="align-middle"><button class="btn btn-sm btn-primary"><i
+                                        class="fa fa-times"></i></button></td>
+                        </tr>
+                        <td class="align-middle"><img src="img/producto 3.jpg" alt="" style="width: 50px;">Espuma de
+                            Limpieza
+                        </td>
+                        <td class="align-middle">$700</td>
+                        <td class="align-middle">
+                            <div class="input-group quantity mx-auto" style="width: 100px;">
+                                <div class="input-group-btn">
+                                    <button id="disminuir3" class="btn btn-sm btn-primary">
+                                        <i class="fa fa-minus"></i>
+                                    </button>
+                                </div>
+                                <div type="text" id="contador3"
+                                    class=" form-control form-control-sm bg-secondary text-center">
+                                </div>
+                                <div class="input-group-btn">
+                                    <button id="aumentar3" class=" btn btn-sm btn-primary btn-plus">
+                                        <i class="fa fa-plus"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </td>
+                        <td class="align-middle">$700</td>
+                        <td class="align-middle"><button class="btn btn-sm btn-primary"><i
+                                    class="fa fa-times"></i></button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -236,19 +285,19 @@
                     <div class="card-body">
                         <div class="d-flex justify-content-between mb-3 pt-1">
                             <h6 class="font-weight-medium">Subtotal</h6>
-                            <h6 class="font-weight-medium">$150</h6>
+                            <h6 class="font-weight-medium">$4100</h6>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-medium">Shipping</h6>
-                            <h6 class="font-weight-medium">$10</h6>
+                            <h6 class="font-weight-medium">Envío</h6>
+                            <h6 class="font-weight-medium">$100</h6>
                         </div>
                     </div>
                     <div class="card-footer border-secondary bg-transparent">
                         <div class="d-flex justify-content-between mt-2">
                             <h5 class="font-weight-bold">Total</h5>
-                            <h5 class="font-weight-bold">$160</h5>
+                            <h5 class="font-weight-bold">$4200</h5>
                         </div>
-                        <button class="btn btn-block btn-primary my-3 py-3">Proceed To Checkout</button>
+                        <button class="btn btn-block btn-primary my-3 py-3">Proceder al Pago</button>
                     </div>
                 </div>
             </div>
