--- a/index.html
+++ b/index.html
@@ -199,15 +199,16 @@
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
                                     <div class="input-group-btn">
-                                        <button id="disminuir1" class="btn btn-sm btn-primary">
-                                            <i class="fa fa-minus"></i>
+                                        <button class="btn btn-sm btn-primary disminuir">
+                                            -
                                         </button>
                                     </div>
+                                    <!-- <div> -->
                                     <div type="text" id="contador1"
                                         class=" form-control form-control-sm bg-secondary text-center"></div>
+                                    <!-- </div> -->
                                     <div class="input-group-btn">
-                                        <button id="aumentar1" class="btn btn-sm btn-primary btn-plus">
-                                            <i class="fa fa-plus"></i>
+                                        <button class="btn btn-sm btn-primary btn-plus aumentar">+
                                         </button>
                                     </div>
                                 </div>
@@ -224,15 +225,16 @@
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
                                     <div class="input-group-btn">
-                                        <button id="disminuir2" class="btn btn-sm btn-primary">
-                                            <i class="fa fa-minus"></i>
+                                        <button class="btn btn-sm btn-primary disminuir"> -
                                         </button>
                                     </div>
+                                    <!-- <div> -->
                                     <div type="text" id="contador2"
                                         class=" form-control form-control-sm bg-secondary text-center"></div>
+                                    <!-- </div> -->
                                     <div class="input-group-btn">
-                                        <button id="aumentar2" class="btn btn-sm btn-primary btn-plus">
-                                            <i class="fa fa-plus"></i>
+                                        <button class="btn btn-sm btn-primary btn-plus aumentar">
+                                            +
                                         </button>
                                     </div>
                                 </div>
@@ -248,18 +250,19 @@
                         <td class="align-middle">
                             <div class="input-group quantity mx-auto" style="width: 100px;">
                                 <div class="input-group-btn">
-                                    <button id="disminuir3" class="btn btn-sm btn-primary">
-                                        <i class="fa fa-minus"></i>
+                                    <button class="btn btn-sm btn-primary disminuir"> -
+
                                     </button>
                                 </div>
+                                <!-- <div> -->
                                 <div type="text" id="contador3"
-                                    class=" form-control form-control-sm bg-secondary text-center">
-                                </div>
-                                <div class="input-group-btn">
-                                    <button id="aumentar3" class=" btn btn-sm btn-primary btn-plus">
-                                        <i class="fa fa-plus"></i>
-                                    </button>
-                                </div>
+                                    class=" form-control form-control-sm bg-secondary text-center"></div>
+                                <!-- </div> -->
+                                <!-- <div class="input-group-btn"> -->
+                                <button class=" btn btn-sm btn-primary btn-plus aumentar"> +
+
+                                </button>
+                                <!-- </div> -->
                             </div>
                         </td>
                         <td class="align-middle">$700</td>
