--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -23,7 +23,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -165,127 +165,154 @@
     <!-- Page Header Start -->
     <div class="container-fluid bg-secondary mb-5">
         <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 300px">
-            <h1 class="font-weight-semi-bold text-uppercase mb-3">Tu carrito</h1>
+            <h1 class="font-weight-semi-bold text-uppercase mb-3">Finalizar compra</h1>
             <div class="d-inline-flex">
                 <p class="m-0"><a href="">Inicio</a></p>
                 <p class="m-0 px-2">-</p>
-                <p class="m-0">Carrito</p>
+                <p class="m-0">Checkout</p>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
 
-    <!-- Cart Start -->
+    <!-- Checkout Start -->
     <div class="container-fluid pt-5">
         <div class="row px-xl-5">
-            <div class="col-lg-8 table-responsive mb-5">
-                <table class="table table-bordered text-center mb-0">
-                    <thead class="bg-secondary text-dark">
-                        <tr>
-                            <th>Productos</th>
-                            <th>Precio</th>
-                            <th>Cantidad</th>
-                            <th>Total</th>
-                            <th>Quitar</th>
-                        </tr>
-                    </thead>
-                    <tbody class="align-middle">
-                        <tr>
-                            <td class="align-middle"><img src="img/producto 1.jpg" alt="" style="width: 50px;">Crema
-                                Antioxidante
-                            </td>
-                            <td class="align-middle">$1800</td>
-                            <td class="align-middle">
-                                <div class="input-group quantity mx-auto" style="width: 100px;">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary disminuir">
-                                            -
-                                        </button>
-                                    </div>
-                                    <!-- <div> -->
-                                    <div type="text" id="contador1"
-                                        class=" form-control form-control-sm bg-secondary text-center"></div>
-                                    <!-- </div> -->
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary btn-plus aumentar">+
-                                        </button>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="align-middle">$1800</td>
-                            <td class="align-middle"><button class="btn btn-sm btn-primary"><i
-                                        class="fa fa-times"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td class="align-middle"><img src="img/producto 2.jpg" alt="" style="width: 50px;">Serum BHA
-                                + AHA
-                            </td>
-                            <td class="align-middle">$1600</td>
-                            <td class="align-middle">
-                                <div class="input-group quantity mx-auto" style="width: 100px;">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary disminuir"> -
-                                        </button>
-                                    </div>
-                                    <!-- <div> -->
-                                    <div type="text" id="contador2"
-                                        class=" form-control form-control-sm bg-secondary text-center"></div>
-                                    <!-- </div> -->
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary btn-plus aumentar">
-                                            +
-                                        </button>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="align-middle">$1600</td>
-                            <td class="align-middle"><button class="btn btn-sm btn-primary"><i
-                                        class="fa fa-times"></i></button></td>
-                        </tr>
-                        <td class="align-middle"><img src="img/producto 3.jpg" alt="" style="width: 50px;">Espuma de
-                            Limpieza
-                        </td>
-                        <td class="align-middle">$700</td>
-                        <td class="align-middle">
-                            <div class="input-group quantity mx-auto" style="width: 100px;">
-                                <div class="input-group-btn">
-                                    <button class="btn btn-sm btn-primary disminuir"> -
-
-                                    </button>
-                                </div>
-                                <!-- <div> -->
-                                <div type="text" id="contador3"
-                                    class=" form-control form-control-sm bg-secondary text-center"></div>
-                                <!-- </div> -->
-                                <!-- <div class="input-group-btn"> -->
-                                <button class=" btn btn-sm btn-primary btn-plus aumentar"> +
-
-                                </button>
-                                <!-- </div> -->
+            <div class="col-lg-8">
+                <div class="mb-4">
+                    <h4 class="font-weight-semi-bold mb-4">Información de Envío</h4>
+                    <div class="row">
+                        <div class="col-md-6 form-group">
+                            <label>Nombre</label>
+                            <input class="form-control" type="text" placeholder="Tu nombre">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Apellido</label>
+                            <input class="form-control" type="text" placeholder="Tu Apellido">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>E-mail</label>
+                            <input class="form-control" type="text" placeholder="ejemplo@email.com">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Telefono</label>
+                            <input class="form-control" type="text" placeholder="099 123 456">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Línea de Dirección 1</label>
+                            <input class="form-control" type="text" placeholder="Nombre de calle y número">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Línea de Dirección 1</label>
+                            <input class="form-control" type="text" placeholder="Apartamento, manzana, solar, etc.">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>País</label>
+                            <select class="custom-select">
+                                <option selected>Uruguay</option>
+                                <option>Argentina</option>
+                                <option>Chile</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Departamento</label>
+                            <input class="form-control" type="text" placeholder="Montevideo">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Ciudad</label>
+                            <input class="form-control" type="text" placeholder="Montevideo">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Código Postal</label>
+                            <input class="form-control" type="text" placeholder="12 345">
+                        </div>
+                        <div class="col-md-12 form-group">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="newaccount">
+                                <label class="custom-control-label" for="newaccount">Crear Cuenta</label>
                             </div>
-                        </td>
-                        <td class="align-middle">$700</td>
-                        <td class="align-middle"><button class="btn btn-sm btn-primary"><i
-                                    class="fa fa-times"></i></button></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-lg-4">
-                <form class="mb-5" action="">
-                    <div class="input-group">
-                        <input type="text" class="form-control p-4" placeholder="Código de cupón">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary">Aplicar Cupón</button>
+                        </div>
+                        <div class="col-md-12 form-group">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="shipto">
+                                <label class="custom-control-label" for="shipto" data-toggle="collapse"
+                                    data-target="#shipping-address">Enviar a diferente dirección</label>
+                            </div>
                         </div>
                     </div>
-                </form>
+                </div>
+                <div class="collapse mb-4" id="shipping-address">
+                    <h4 class="font-weight-semi-bold mb-4">Shipping Address</h4>
+                    <div class="row">
+                        <div class="col-md-6 form-group">
+                            <label>First Name</label>
+                            <input class="form-control" type="text" placeholder="John">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Last Name</label>
+                            <input class="form-control" type="text" placeholder="Doe">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>E-mail</label>
+                            <input class="form-control" type="text" placeholder="example@email.com">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Mobile No</label>
+                            <input class="form-control" type="text" placeholder="+123 456 789">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Address Line 1</label>
+                            <input class="form-control" type="text" placeholder="123 Street">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Address Line 2</label>
+                            <input class="form-control" type="text" placeholder="123 Street">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Country</label>
+                            <select class="custom-select">
+                                <option selected>United States</option>
+                                <option>Afghanistan</option>
+                                <option>Albania</option>
+                                <option>Algeria</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>City</label>
+                            <input class="form-control" type="text" placeholder="New York">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>State</label>
+                            <input class="form-control" type="text" placeholder="New York">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>ZIP Code</label>
+                            <input class="form-control" type="text" placeholder="123">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
                 <div class="card border-secondary mb-5">
                     <div class="card-header bg-secondary border-0">
-                        <h4 class="font-weight-semi-bold m-0">Resumen de carrito</h4>
+                        <h4 class="font-weight-semi-bold m-0">Total de pedido</h4>
                     </div>
                     <div class="card-body">
+                        <h5 class="font-weight-medium mb-3">Productos</h5>
+                        <div class="d-flex justify-content-between">
+                            <p>Crema Antioxidante</p>
+                            <p>$1800</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p>Serum BHA</p>
+                            <p>$1600</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p>Espuma de Limpieza</p>
+                            <p>$700</p>
+                        </div>
+                        <hr class="mt-0">
                         <div class="d-flex justify-content-between mb-3 pt-1">
                             <h6 class="font-weight-medium">Subtotal</h6>
                             <h6 class="font-weight-medium">$4100</h6>
@@ -300,13 +327,40 @@
                             <h5 class="font-weight-bold">Total</h5>
                             <h5 class="font-weight-bold">$4200</h5>
                         </div>
-                        <button id="enviar" class="btn btn-block btn-primary my-3 py-3">Proceder al Pago</button>
+                    </div>
+                </div>
+                <div class="card border-secondary mb-5">
+                    <div class="card-header bg-secondary border-0">
+                        <h4 class="font-weight-semi-bold m-0">Método de pago</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <div class="custom-control custom-radio">
+                                <input type="radio" class="custom-control-input" name="payment" id="paypal">
+                                <label class="custom-control-label" for="paypal">Efectivo</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="custom-control custom-radio">
+                                <input type="radio" class="custom-control-input" name="payment" id="directcheck">
+                                <label class="custom-control-label" for="directcheck">Tranferencia</label>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="custom-control custom-radio">
+                                <input type="radio" class="custom-control-input" name="payment" id="banktransfer">
+                                <label class="custom-control-label" for="banktransfer">Depósito Abitab o Redpagos</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer border-secondary bg-transparent">
+                        <button id="finalizarCompra" class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3">Finalizar compra</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Cart End -->
+    <!-- Checkout End -->
 
 
     <!-- Footer Start -->
@@ -397,12 +451,8 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-
-
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.20/dist/sweetalert2.all.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/checkout.js"></script>
 </body>
 
 </html>
