commit para deafío fetch

--- a/index.html
+++ b/index.html
@@ -257,8 +257,7 @@
                                 <!-- <div> -->
                                 <div type="text" id="contador3"
                                     class=" form-control form-control-sm bg-secondary text-center"></div>
-                                <!-- </div> -->
-                                <!-- <div class="input-group-btn"> -->
+                                
                                 <button class=" btn btn-sm btn-primary btn-plus aumentar"> +
 
                                 </button>
@@ -306,8 +305,12 @@
             </div>
         </div>
     </div>
-    <!-- Cart End -->
 
+    <h3 class="m-4 text-center">Con tu compra podes elegir 2 muestras gratis</h3>
+    <!-- Cart End -->
+    <section id="post">
+        <!-- Contenido dinamico -->
+    </section>
 
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-dark mt-5 pt-5">
@@ -404,5 +407,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.20/dist/sweetalert2.all.min.js"></script>
     <script src="js/main.js"></script>
 </body>
-
 </html>
+
+
