--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
 
     <h3 class="m-4 text-center">Con tu compra podes elegir 2 muestras gratis</h3>
     <!-- Cart End -->
-    <section id="post">
+    <div id="post">
         <!-- Contenido dinamico -->
-    </section>
+    </div>
 
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-dark mt-5 pt-5">
